feat(server): add User model and initial root user

--- a/backend/Domoupravitel.Web/appsettings.json
+++ b/backend/Domoupravitel.Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "server=localhost; port=3306; database=domoupravitel; user=wnvko; password=tova e tayna?; Persist Security Info=False; Connect Timeout=300"
+    "Default": "server=localhost; port=3306; database=domoupravitel; user=root; password=par01a_MySql; Persist Security Info=False; Connect Timeout=300"
   }
 }
