--- a/backend/Domoupravitel.Web/Domoupravitel.Web.csproj
+++ b/backend/Domoupravitel.Web/Domoupravitel.Web.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\Domoupravitel.Models\Domoupravitel.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
