--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o",
-    "build": "ng build",
+    "build": "ng build --base-href=/domoupravitel-front/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
