--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,9 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@igniteui/material-icons-extended": "^2.10.0",
+    "@infragistics/igniteui-angular": "^15.0.10",
     "fflate": "^0.7.3",
     "hammerjs": "^2.0.8",
-    "igniteui-angular": "^15.0.10",
     "minireset.css": "~0.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
