--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "@igniteui/angular-schematics": "~15.0.1100",
     "@types/hammerjs": "^2.0.40",
     "@types/jasmine": "~4.3.0",
+    "igniteui-angular-i18n": "^16.1.2",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
