feat: allow user deletion

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Compiled output
-/frontend/dist
+/frontend/dist/**/*
 
 # Node
 /frontend/node_modules
@@ -43,4 +43,4 @@ msbuild.wrn
 .vs/
 /utils.txt
 
-/dump/*.**
+/dump/**/*
