ng update @angular/cli

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -78,10 +78,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "domoupravitel-front-end:build:production"
+              "buildTarget": "domoupravitel-front-end:build:production"
             },
             "development": {
-              "browserTarget": "domoupravitel-front-end:build:development"
+              "buildTarget": "domoupravitel-front-end:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -89,7 +89,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "domoupravitel-front-end:build"
+            "buildTarget": "domoupravitel-front-end:build"
           }
         },
         "test": {
