--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,11 +20,13 @@
     "@angular/router": "^17.1.1",
     "@igniteui/material-icons-extended": "^3.0.2",
     "@infragistics/igniteui-angular": "^17.0.11",
+    "@types/uuid": "^9.0.8",
     "fflate": "^0.7.3",
     "hammerjs": "^2.0.8",
     "minireset.css": "~0.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
